deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: trend-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: trend-app

  template:
    metadata:
      labels:
        app: trend-app

    spec:
      containers:
      - name: trend-app

        image: dockerhubuser/trend-app:v1

        ports:
        - containerPort: 3000
