service.yml
apiVersion: v1
kind: Service
metadata:
  name: trend-service
  labels:
    app: trend-app
spec:
  type: ClusterIP
  selector:
    app: trend-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
